--- a/HW6/hw6.ipynb
+++ b/HW6/hw6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import astropy.units as u\n",
     "import astropy.constants as const\n",
     "import astropy.cosmology as cosmo\n",
-    "# import os\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.optimize as o\n",
     "\n",
-    "abs_path = \"/Users/audrey/Documents/PHYS521/HW6/\" #if (os.path.isdir('/Users/audrey')) else \"\""
+    "abs_path = \"/Users/audrey/Documents/PHYS521/HW6/\" if (os.path.isdir('/Users/audrey')) else \"\""
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
     "def distance(m, M):\n",
     "    return 10 * 10**((m - M) / 5)  # in pc\n",
     "\n",
-    "distances = u.Quantity(distance(gal_app_mag, abs_mag), u.pc).to(u.Mpc)\n",
+    "distances = u.Quantity(distance(gal_app_mag, abs_mag), u.pc).to(u.Mpc)  # distances in Mpc\n",
     "for i in range(4): \n",
     "    print(f\"Distance to galaxy_{i}: {distances[i]:.2f}\")"
    ]
@@ -93,18 +93,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda0 = [3933, 3968] * u.Angstrom  # Calcium doublet rest wavelengths\n",
+    "# Calcium doublet\n",
+    "lambda0 = [3933, 3968] * u.Angstrom  # Rest wavelengths\n",
     "l_diff = lambda0[1] - lambda0[0]  # Wavelength difference\n",
+    "\n",
+    "# Spectrum of star similar to Sun\n",
     "sunlike_star = np.load(abs_path + \"data/star.npy\")  # At z=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -184,8 +187,8 @@
    "source": [
     "# Plot the galaxy spectra & find the shifted calcium lines\n",
     "colors = ['mediumvioletred', 'rebeccapurple', 'olivedrab', 'chocolate']\n",
-    "cal_lines1 = []  # wavelength, Å\n",
-    "cal_lines2 = []  # wavelength, Å\n",
+    "cal_lines1 = []  # shifted wavelengths of 1st Ca line, Å\n",
+    "cal_lines2 = []  # shifted wavelengths of 2nd Ca line, Å\n",
     "\n",
     "for i, spectrum in enumerate(galaxy_files.values()):\n",
     "    plt.figure(figsize=(8, 6), dpi=150)\n",
@@ -205,18 +208,18 @@
     "    plt.plot(spectrum[0], spectrum[1], lw=0.7, c=colors[i], label=f\"Galaxy_{i}\")\n",
     "\n",
     "    # Find shifted calcium lines\n",
-    "    # first line\n",
+    "    # first line: search for min in the plotted range\n",
     "    line1 = np.argmin(spectrum[1][xmin:xmax]) + xmin\n",
     "    if i==3:  # 2nd line is lower for galaxy3 so we need to adjust the range\n",
     "        start = line1-int(l_diff.value)-10\n",
     "        line1 = np.argmin(spectrum[1][start:line1-10]) + start\n",
     "    cal_lines1.append(spectrum[0][line1])\n",
-    "    # 2nd line\n",
+    "    # 2nd line: search for min in a smaller range after the first line\n",
     "    start = line1+10\n",
     "    stop = line1+int(l_diff.value)+10\n",
     "    line2 = np.argmin(spectrum[1][start:stop]) + start\n",
     "    cal_lines2.append(spectrum[0][line2])\n",
-    "    # plot to check\n",
+    "    # plot the shifted lines\n",
     "    plt.axvline(spectrum[0][line1], c=colors[i], ls='--', label=r\"$\\lambda_{shifted}$ = 3933 $\\AA$\")\n",
     "    plt.axvline(spectrum[0][line2], c=colors[i], ls='--', alpha=0.6, label=r\"$\\lambda_{shifted}$ = 3968 $\\AA$\")\n",
     "\n",
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -246,6 +249,7 @@
     }
    ],
    "source": [
+    "# Print info about the calcium doublet\n",
     "print(f\"Rest wavelengths of calcium doublet: {lambda0[0]:.0f}, {lambda0[1]:.0f}\")\n",
     "\n",
     "for i, (l1,l2) in enumerate(zip(cal_lines1, cal_lines2)):\n",
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -269,14 +273,15 @@
     }
    ],
    "source": [
+    "# Calculate redshift from shifted calcium lines\n",
     "def redshift(l_obs, l_rest):\n",
     "    # z = lambda_obs / lambda_rest - 1\n",
     "    return l_obs / l_rest - 1\n",
     "\n",
-    "# Calculate redshift from shifted calcium lines\n",
     "z1 = redshift(cal_lines1, lambda0[0].value) # from first Ca line\n",
     "z2 = redshift(cal_lines2, lambda0[1].value) # from second Ca line\n",
-    "z_avg = (z1 + z2) / 2\n",
+    "z_avg = (z1 + z2) / 2  # average the redshift for each galaxy\n",
+    "\n",
     "for i,z in enumerate(z_avg):\n",
     "    print(f\"Redshift for galaxy_{i}: {z:.4f}\")"
    ]
@@ -290,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +314,14 @@
       "Galaxy_3:\n",
       "    v = 59231.09 km / s\n",
       "    H0 = 31.08 km / (Mpc s)\n",
-      "Average Hubble constant: 62.54 km / (Mpc s)\n",
+      "Average H0: 62.54 km / (Mpc s)\n",
       "Expected H0: 67.66 km / (Mpc s)\n",
       "Age of universe: 15.63 Gyr\n"
      ]
     }
    ],
    "source": [
+    "# Functions\n",
     "def velocity(z):\n",
     "    # v = c * z\n",
     "    return const.c * z\n",
@@ -327,14 +333,16 @@
     "# Calculate velocity from redshift\n",
     "v = velocity(z_avg)\n",
     "\n",
-    "# Calculate Hubble constant\n",
+    "# Calculate Hubble constant for each galaxy\n",
     "H0 = hubble_law(distances, v)\n",
-    "for i in range(4):\n",
+    "for i in range(4):  # print velocity and H0 info\n",
     "    print(f\"Galaxy_{i}:\")\n",
     "    print(f\"    v = {v[i].to(u.km/u.s):.2f}\")\n",
     "    print(f\"    H0 = {H0[i].to(u.km /u.Mpc /u.s):.2f}\")\n",
+    "\n",
+    "# Average Hubble constant\n",
     "H0_avg = np.mean(H0)\n",
-    "print(f\"Average Hubble constant: {H0_avg.to(u.km /u.Mpc /u.s):.2f}\")\n",
+    "print(f\"Average H0: {H0_avg.to(u.km /u.Mpc /u.s):.2f}\")\n",
     "print(f\"Expected H0: {cosmo.Planck18.H0:.2f}\")\n",
     "\n",
     "# Age of universe\n",
@@ -351,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,34 +368,35 @@
     "\n",
     "sdss_r = sdss_data['r'].values  # apparent R-band magnitude\n",
     "sdss_z = sdss_data['z'].values  # redshift\n",
-    "sdss_z_err = sdss_data['zErr'].values  # redshift error"
+    "sdss_z_err = sdss_data['zErr'].values  # redshift error\n",
+    "\n",
+    "# Given info\n",
+    "v_disp = 140 * u.km / u.s  # velocity dispersion\n",
+    "M_R = -20.5  # absolute R-band magnitude"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get values for plot\n",
-    "v_disp = 140 * u.km / u.s  # velocity dispersion\n",
-    "M_R = -20.5  # absolute R-band magnitude\n",
-    "\n",
+    "# Calculate recession velocity and distance for each galaxy\n",
     "def distance2(M, r):\n",
     "    \"\"\"\n",
-    "    r = apparent r band magnitude\n",
-    "    M = absolute R band magnitude\n",
+    "    r = apparent r-band magnitude\n",
+    "    M = absolute R-band magnitude\n",
     "    return distance in Mpc\n",
     "    \"\"\"\n",
     "    return 10**((r - M - 25)/5)\n",
     "\n",
-    "sdss_rec_vel = velocity(sdss_z).to(u.km /u.s)  # recession velocity, km/s, fxn define in part A: v = c*z\n",
+    "sdss_rec_vel = velocity(sdss_z).to(u.km /u.s)  # recession velocity, km/s, fxn defined in part A: v = c*z\n",
     "sdss_dist = distance2(M_R, sdss_r) * u.Mpc  # distance in Mpc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
