--- a/HW6/hw6.ipynb
+++ b/HW6/hw6.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
     "    return (3000*z - 607.8*z**2 - 153.6*z**3 + 138.3*z**4) / H0\n",
     "\n",
     "def position(D, ra):\n",
-    "    return D*np.cos(ra), D*np.sin(ra)\n",
+    "    return D*np.cos(ra), D*np.sin(ra)  # Mpc\n",
     "\n",
     "H0 = 0.71 * u.km /u.Mpc /u.s\n",
     "D = distance3(redshifts, H0=H0) # Mpc\n",
@@ -599,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plot in part b) is very similar to the one given in the assignment question as they both follow the same trends. "
+    "The plot in part b) is very similar to the one given in the assignment question as they both follow the same trends. The correlation is high for smaller distances and decreases as the distance increases. The negative correlation aroun 200 km indicates underdensities in the distribution of the galaxies, and the increase above 0 around 600 km shows that galaxies are more clustered on these length scales. This agrees with the two-point correlation function for galaxies, as they tend to cluster on small scales (positive correlation) avoid underdensities at intermediate scales (negative correlation), and display weaker clustering on larger scales (positive correlation)."
    ]
   }
  ],
